fix(bookmarks): make longer names readable

--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -72,8 +72,8 @@ toolbarbutton {
 .menupopup-arrowscrollbox {
 	border: none !important;
 	border-radius: 0 !important;
-	margin: 0 !important;
 	padding: 0 !important;
+	margin-top: 0 !important;
 }
 
 #PersonalToolbar {
